--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\json_portfolio.js" defer></script>
+    <script src="https://github.com/Rute23/feze.portfolio.com/blob/main/json_portfolio.js" defer></script>
     <link rel="stylesheet" href="C:\Users\Steve Feze\Desktop\formation HTML\fichierCSS.css" />
     <script src="C:\Users\Steve Feze\Desktop\formation HTML\formulaire.js" defer></script>
     <script src="https://kit.fontawesome.com/c7efd00882.js" crossorigin="anonymous"></script>
@@ -80,7 +80,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                        <img class="photos" src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\image\feze_cercle.png"
+                        <img class="photos" src="https://github.com/Rute23/feze.portfolio.com/blob/main/feze_cercle.png"
                      alt="photo">
                 </div>
                  <div class="col-md-6" >
