--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="https://github.com/Rute23/feze.portfolio.com/blob/main/json_portfolio.js" defer></script>
-    <link rel="stylesheet" href="C:\Users\Steve Feze\Desktop\formation HTML\fichierCSS.css" />
-    <script src="C:\Users\Steve Feze\Desktop\formation HTML\formulaire.js" defer></script>
+    <script src="json_portfolio.js" defer></script>
+    <link rel="stylesheet" href="fichierCSS.css" />
+    <script src="formulaire.js" defer></script>
     <script src="https://kit.fontawesome.com/c7efd00882.js" crossorigin="anonymous"></script>
     
     <title>MY portfolio</title>
