--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                        <h3 ><a class="name" href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\feze_folio_index.htm">Steve Edgar Feze Feugang</a> </h3>
-                        <p><a class="profession" href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\feze_folio_index.htm"> Web developper</a></p>       
+                        <h3 ><a class="name" href="index.html">Steve Edgar Feze Feugang</a> </h3>
+                        <p><a class="profession" href="index.html"> Web developper</a></p>       
                 </div>
 
                 <button type="button" class="navbar-toggle collapsed"
@@ -36,14 +36,14 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right" >
                     <li class="project">
-                        <a href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\feze_folio_index.htm" > Personnal Projects</a>
+                        <a href="index.html" > Personnal Projects</a>
                             <div class="dropdown-content">
                                 <a id="tutorbot" href="#">Tutorbot</a><br>
                                 <a id="faqbot" href="#">FAQbot</a><br>
                                 <a id="phdproject" href="#">PHD Project</a><br>
                                 <a id="nlp" href="#">NLP with Spacy</a><br>
                                 <a id="formular" href="#">Form</a><br>
-                                <a id="resto" href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\restaurant_index.htm">Restaurant</a><br>
+                                <a id="resto" href="restaurant_index.htm">Restaurant</a><br>
                             </div>
                     </li>
                     <li id="comp" class="competence">
@@ -80,7 +80,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                        <img class="photos" src="https://github.com/Rute23/feze.portfolio.com/blob/main/feze_cercle.png"
+                        <img class="photos" src="feze_cercle.png"
                      alt="photo">
                 </div>
                  <div class="col-md-6" >
@@ -107,25 +107,7 @@
             </div>
            </div>
     </section>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="menu3">
-                        <ul class="menuSecond3">
-                            <li>
-                                <a class="acte" href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\projets.htm">Projects</a>
-                            </li>
-                            <li>
-                                <a class="cv" href="#">Curriculum Vitae</a>
-                            </li>
-                            <li>
-                                <a class="appel" href="#">Contact</a>
-                            </li>
-                        </ul>
-                       </p>
-                </div>
-            </div>
-        </div>
+      
     <section id="section2">
         <div class="container-fluid">
             <div class="row">
@@ -167,7 +149,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="phdimage" src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\phdproject.png"
+                    <img class="phdimage" src="phdproject.png"
                      title="PHD Conception" alt="conceptionIMG" />
                 </div>
                 <div class="col-md-6">
@@ -195,44 +177,6 @@
                         speech, gender, number, verbal form and tense, syntactic
                         dependencies) and then I build a parse tree of the sentence.
                         To do this, we use Python, the Spacy library and notebook of Google Colaboratory
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-     <section id="section3">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6">
-                    <embed src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\Vidéo1.mp4"
-                    width="640" height="380" title="Title of my video" />
-                </div>
-                <div class="col-md-6">
-                    <p class="projet2">FAQbot</p>
-                    <p class="faqbot">This chatbot will be an information tool on the documents to be gathered to constitute a career file. 
-                        This conversational agent is intended for the staff of the Ministry of Secondary Education of Cameroon,
-                         student teachers at the end of their training and any other user wishing to constitute 
-                         or help a relative to constitute a career file. The chatbot is currently deployed on Telegram for a test phase.
-                         This chatbot is developed with the help of Dialogflow.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="section4">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6">
-                    <img class="phdimage" src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\phdproject.png"
-                     title="PHD Conception" alt="conceptionIMG" />
-                </div>
-                <div class="col-md-6">
-                    <p class="phd">PHD project</p>
-                    <p class="resume">The proposed model uses Spacy to extract grammatical data from the source text words, 
-                        then it performs word embedding of this data and concatenates it with the corresponding source word 
-                        vectors to obtain deep vectors, and finally these vectors are passed to the Neural machine translation model
                     </p>
                 </div>
             </div>
