--- a/restaurant_index.htm
+++ b/restaurant_index.htm
@@ -18,8 +18,8 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\index.html.htm" class="pull-left visible-md visible-lg">
-                        <img id="logo-img"  src="C:\Users\Steve Feze\Desktop\formation HTML\feze_cercle.png" alt="logo">
+                    <a href="index.html.htm" class="pull-left visible-md visible-lg">
+                        <img id="logo-img"  src="feze_cercle.png" alt="logo">
                     </a>
 
                     <div class="navbar-brand">
@@ -39,11 +39,11 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
                         <li class="visible-xs active">
-                            <a href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\restaurant_index.htm">
+                            <a href="restaurant_index.htm">
                               <span class="glyphicon glyphicon-home"></span> Home</a>
                         </li>
                      <li>
-                       <a href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\menuCategorie.htm">
+                       <a href="menuCategorie.htm">
                          <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
                      </li>
                      <li>
@@ -72,7 +72,7 @@
         </div>
         <div id="home-title" class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <a href="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\menuCategorie.htm"><div id="menu-tile"><span>menu</span></div></a>
+                <a href="menuCategorie.htm"><div id="menu-tile"><span>menu</span></div></a>
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
                 <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
