--- a/restaurant_index.htm
+++ b/restaurant_index.htm
@@ -18,7 +18,7 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="index.html.htm" class="pull-left visible-md visible-lg">
+                    <a href="index.html" class="pull-left visible-md visible-lg">
                         <img id="logo-img"  src="feze_cercle.png" alt="logo">
                     </a>
 
