--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         Dialogflow and deployed on Telegram in order to be closer to the students.</p>
                 </div>
                 <div class="col-md-6">
-                    <embed src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\Vidéo2.mp4"
+                    <embed src="https://drive.google.com/file/d/1uNpgTPfrghBbLBfyHUw_U-rEuDzzNXPl/view?usp=share_link"
                         width="640" height="380" title="Title of my video" />
                 </div>
             </div>
@@ -129,7 +129,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\Vidéo1.mp4"
+                    <embed src="https://drive.google.com/file/d/1BddF8DXLrlxWe1OF1--5xZfLiSclbgxX/view?usp=share_link"
                     width="640" height="380" title="Title of my video" />
                 </div>
                 <div class="col-md-6">
@@ -167,7 +167,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed class="codeImage" src="C:\Users\Steve Feze\Desktop\diplome_releveno_Steve_Rute\coursera\spacyVideo.mp4"
+                    <embed class="codeImage" src="https://drive.google.com/file/d/1RLunL79T4MtXLPxoka5EQ0IIg-LmKa8J/view?usp=share_link"
                      title="code" alt="codeImage" />
                 </div>
                 <div class="col-md-6">
@@ -299,7 +299,7 @@
                     <section id="phone" class="col-sm-4">
                         <i class="fa-sharp fa-solid fa-phone"></i>
                         <span>Telephon</span><br>                     
-                        000000000000000
+                        +49 176 23574264
                         <hr class="visible-xs">
                     </section>
                     <section id="adress" class="col-sm-4">
