--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         Dialogflow and deployed on Telegram in order to be closer to the students.</p>
                 </div>
                 <div class="col-md-6">
-                    <embed src="https://drive.google.com/file/d/1uNpgTPfrghBbLBfyHUw_U-rEuDzzNXPl/view?usp=share_link"
+                    <embed src="https://youfiles.herokuapp.com/videodictionary/?m=Video_Player_Drive&state=%7B%22ids%22:%5B%221BddF8DXLrlxWe1OF1--5xZfLiSclbgxX%22%5D,%22action%22:%22open%22,%22resourceKeys%22:%7B%7D%7D"
                         width="640" height="380" title="Title of my video" />
                 </div>
             </div>
@@ -129,7 +129,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed src="https://drive.google.com/file/d/1BddF8DXLrlxWe1OF1--5xZfLiSclbgxX/view?usp=share_link"
+                    <embed src="https://youfiles.herokuapp.com/videodictionary/?m=Video_Player_Drive&state=%7B%22ids%22:%5B%221uNpgTPfrghBbLBfyHUw_U-rEuDzzNXPl%22%5D,%22action%22:%22open%22,%22resourceKeys%22:%7B%7D%7D"
                     width="640" height="380" title="Title of my video" />
                 </div>
                 <div class="col-md-6">
@@ -167,7 +167,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed class="codeImage" src="https://drive.google.com/file/d/1RLunL79T4MtXLPxoka5EQ0IIg-LmKa8J/view?usp=share_link"
+                    <embed class="codeImage" src="https://drive.google.com/drive/quota"
                      title="code" alt="codeImage" />
                 </div>
                 <div class="col-md-6">
