--- a/restaurant_index.htm
+++ b/restaurant_index.htm
@@ -55,8 +55,8 @@
                          <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
                      </li>
                      <li id="phone" class="hidden-xs">
-                       <a href="tel:410-602-5008">
-                         <span>410-602-5008</span></a><div>* We Deliver</div>
+                       <a href="#">
+                         <span>+49 176 23574264</span></a><div>* We Deliver</div>
                      </li>
                    </ul><!-- #nav-list -->
                  </div><!-- .collapse .navbar-collapse -->
