--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                  <div class="col-md-6" >
                        <p class="brevepresentation">
-                        Hallo, <br>after a double training in computer science and linguistics, 
+                        Hello! <br>after a double training in computer science and linguistics, 
                         I taught computer science for five years in high school. 
                         Eager to combine my two fields of training, I conducted a doctoral research in computational linguistics, 
                         specifically in machine translation based on deep learning. Today,
@@ -298,7 +298,7 @@
             <div class="row">
                     <section id="phone" class="col-sm-4">
                         <i class="fa-sharp fa-solid fa-phone"></i>
-                        <span>Telephon</span><br>                     
+                        <span>Telefon</span><br>                     
                         +49 176 23574264
                         <hr class="visible-xs">
                     </section>
