--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
                 </div>
                 <div class="col-md-6">
                     <p class="phd">PHD project</p>
-                    <p class="resume">The proposed model uses Spacy to extract grammatical data from the source text words, 
+                    <p class="resume">
+                        <p>My research was about machine translation based on neural networks. 
+                        The goal was to design a model capable of improving the performance of a classical neural machine translation model.<p> 
+                        The proposed model uses Spacy to extract grammatical data from the source text words, 
                         then it performs word embedding of this data and concatenates it with the corresponding source word 
                         vectors to obtain deep vectors, and finally these vectors are passed to the Neural machine translation model
                     </p>
