--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     </section>
 
     <section id="section6">
+        <div><p>Interactive form developed with HTML, CSS and Javascript</p></div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
