--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                 <div class="col-lg-12">
                     <div id = 'exo'>
                         <form name="RegForm" id = 'formulaire'>
+                            <div><p>Interactive form developed with HTML, CSS and Javascript</p></div><br>
                             <fieldset id="fiedl">
                                 <legend>Quel est votre sexe? </a><abbr title="obligatoire">* <a id="page"></abbr></legend>
                             <label><input id = 'masculin' type="radio" name="check"  value="1"  /> Masculin </label>
