--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right" >
                     <li class="project">
-                        <a href="index.html" > Personnal Projects</a>
+                        <a href="#" > Personnal Projects</a>
                             <div class="dropdown-content">
                                 <a id="tutorbot" href="#">Tutorbot</a><br>
                                 <a id="faqbot" href="#">FAQbot</a><br>
