--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                        </p>
                         <ul class="menuSecond">
                             <li>
-                                <a class="oeuvre" href="#section2">Projects</a>
+                                <a class="oeuvre" id = "ouvrage" href="#s">Projects</a>
                             </li>
                             <li>
-                                <a id="comp" class="lebenslauf" href="#skill">Competences</a>
+                                <a id="com" class="lebenslauf" href="#">Competences</a>
                             </li>
                             <li>
                                 <a class="joindre" href="#media">Contact</a>
