--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                        </p>
                         <ul class="menuSecond">
                             <li>
-                                <a class="oeuvre" id = "ouvrage" href="#s">Projects</a>
+                                <a class="oeuvre" id = "ouvrage" href="#">Projects</a>
                             </li>
                             <li>
                                 <a id="com" class="lebenslauf" href="#">Competences</a>
