--- a/Multi-step-form.html
+++ b/Multi-step-form.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="challenge_1.css">
-    <script src="challenge_1.js" defer></script>
+    <link rel="stylesheet" href="Multi-step-form.css">
+    <script src="Multi-step-form.js" defer></script>
     <title>Multi-step form</title>
 </head>
 <body>
