--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li class="webChallenge">
                         <a href="#">Web challenge</a>
                         <div class="dropdown-content">
-                            <a id="#" href="challenge_1.html" target="_blank">Multi-step form</a><br>
+                            <a id="#" href="Multi-step-form.html" target="_blank">Multi-step form</a><br>
                         </div>
                     </li>
                     
