--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         Dialogflow and deployed on Telegram in order to be closer to the students.</p>
                 </div>
                 <div class="col-md-6">
-                    <embed src="Vidéo2.mp4"
+                    <embed src="video2_t4A3tlmB.mp4"
                         width="640" height="380" title="Title of my video" />
                 </div>
             </div>
@@ -132,7 +132,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed src="Vidéo1.mp4"
+                    <embed src="video1_OfQTiVww.mp4"
                     width="640" height="380" title="Title of my video" />
                 </div>
                 <div class="col-md-6">
@@ -170,7 +170,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed src="spacyVideo.mp4"
+                    <embed src="spacyvideo_uvnPRbpu.mp4"
                     width="640" height="380" alt="codeImage" />
                 </div>
                 <div class="col-md-6">
