--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                        <h3 ><a class="name" href="index.html.htm">Steve Edgar Feze Feugang</a> </h3>
-                        <p><a class="profession" href="index.html.htm"> Web developper</a></p>       
+                        <h3 ><a class="name" href="index.html">Steve Edgar Feze Feugang</a> </h3>
+                        <p><a class="profession" href="index.html"> Web developper</a></p>       
                 </div>
 
                 <button type="button" class="navbar-toggle collapsed"
