--- a/restaurant_index.htm
+++ b/restaurant_index.htm
@@ -27,6 +27,12 @@
                             <h1>Rute Bistro</h1>
                         </a>
                     </div>
+                    
+                    <div class="navbar-brand">
+                        <a href="index.html">
+                            <h1>Portfolio</h1>
+                        </a>
+                    </div>
                 </div>
                 <button type="button" class="navbar-toggle collapsed"
                 data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
