--- a/Multi-step-form.html
+++ b/Multi-step-form.html
@@ -285,6 +285,18 @@
 
         </div>
         
+        <div class="thankYou">
+
+            <div class="thanksImage">
+                <img class = "imagethanks" src="images\icon-thank-you.svg" alt="image thank You">
+            </div>
+            <div class="ThanksText">
+                <h2>Thank you!</h2>
+                    Thanks for confirming your subcription! We hope you have<br> 
+                    fun our platform . If you ever need support, please feel free to <br>
+                    email us at <a href="mailto:email@example.com"> 📧stevefeze@outlook.com</a>
+                
+            </div>
     </div>
 </body>
 </html>
