--- a/Multi-step-form.html
+++ b/Multi-step-form.html
@@ -288,7 +288,7 @@
         <div class="thankYou">
 
             <div class="thanksImage">
-                <img class = "imagethanks" src="images\icon-thank-you.svg" alt="image thank You">
+                <img class = "imagethanks" src="icon-thank-you.svg" alt="image thank You">
             </div>
             <div class="ThanksText">
                 <h2>Thank you!</h2>
