--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
                         Dialogflow and deployed on Telegram in order to be closer to the students.</p>
                 </div>
                 <div class="col-md-6">
-                    <embed src="video2_t4A3tlmB.mp4"
-                        width="640" height="380" title="Title of my video" />
+                    <embed src="video2_t4A3tlmB.mp4" width="640" height="380" title="Title of my video" />
                 </div>
             </div>
             
