--- a/index.html
+++ b/index.html
@@ -169,8 +169,11 @@
                         Dialogflow and deployed on Telegram in order to be closer to the students.</p>
                 </div>
                 <div class="col-md-6">
-                    <embed src="video1_OfQTiVww.mp4"
+                    <video controls>
+                            <source src="video1_OfQTiVww.mp4" type="video/mp4"
                         width="640" height="380" title="Title of my video" />
+                    </video>
+                    
                 </div>
             </div>
         </div>
@@ -180,8 +183,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed src="video2_t4A3tlmB.mp4"
-                    width="640" height="380" title="Title of my video" />
+                    <video controls>
+                        <source src="video2_t4A3tlmB.mp4" type="video/mp4"
+                        width="640" height="380" title="Title of my video" />
+                    </video>
                 </div>
                 <div class="col-md-6">
                     <p class="projet2">FAQbot</p>
@@ -218,8 +223,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <embed src="spacyvideo_uvnPRbpu.mp4"
-                    width="640" height="380" alt="codeImage" />
+                    <video controls>
+                        <source src="spacyvideo_uvnPRbpu.mp4" type="video/mp4"
+                        width="640" height="380" alt="codeImage" />
+                    </video>
                 </div>
                 <div class="col-md-6">
                     <p class="pythonExo">Linguistics data extraction</p>
