--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                 <div class="title"><h2>My challenges</h2></div>
                 <div class="text">
                     <ul>
-                        <li>Fulstack web developer</li><br>
-                        <li>Developing a CMS</li><br>
-                        <li>Leading web application development projects</li><br>
-                        <li>Combining web development with AI</li>
+                        <li>To be a Fullstack web developer</li><br>
+                        <li>To developi a CMS</li><br>
+                        <li>To Lead web application development projects</li><br>
+                        <li>To build a learning community in web and webApp development</li>
                     </ul>
                 </div>
             </div>
