--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="text">
                     <ul>
                         <li>To be a Fullstack web developer</li><br>
-                        <li>To developi a CMS</li><br>
+                        <li>To develop a CMS</li><br>
                         <li>To Lead web application development projects</li><br>
                         <li>To build a learning community in web and webApp development</li>
                     </ul>
