--- a/HomePage.html
+++ b/HomePage.html
@@ -10,7 +10,7 @@
 <body>
     <div class="horizontalMenu">
         <div class="horizontalMenuLogo">
-            <img src="assets\images\logo.svg" alt="logo"/>
+            <img src="logo.svg" alt="logo"/>
         </div>
         <div class="horizontalMenuItems">
             <div class="horizontalMenuItem1">Home</div>
@@ -24,7 +24,7 @@
     <div class="banner">
         <div class="PresentationBanner" class="PresentationBannerFlex">
             <div class="bannerImage">
-                <img src="assets\images\image-web-3-desktop.jpg" alt="banner"/>
+                <img src="image-web-3-desktop.jpg" alt="banner"/>
             </div>
             <div class="bannerAbout" class="bannerAboutFlex">
                 <div class="namebanner">
