--- a/HomePage.html
+++ b/HomePage.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="bannerText">
-                    <div class="text"></div>
+                    <div class="text"><h1>Page in progress!!!<h1></div>
                     <div class="link">
                         <button class="ReadMe">Read more</button>
                     </div>
