--- a/HomePage.html
+++ b/HomePage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="HomePage.css">
-    <title>Home page challenge</title>
+    <title>Home page Web challenge</title>
 </head>
 <body>
     <div class="horizontalMenu">
@@ -13,11 +13,11 @@
             <img src="logo.svg" alt="logo"/>
         </div>
         <div class="horizontalMenuItems">
-            <div class="horizontalMenuItem1">Home</div>
-            <div class="horizontalMenuItem2">News</div>
-            <div class="horizontalMenuItem3">Popular</div>
-            <div class="horizontalMenuItem4">Trending</div>
-            <div class="horizontalMenuItem5">Categories</div>
+            <div class="horizontalMenuItem1"><a href="#">Home</a> </div>
+            <div class="horizontalMenuItem2"><a href="#">News</a></div>
+            <div class="horizontalMenuItem3"><a href="#">Popular</a></div>
+            <div class="horizontalMenuItem4"><a href="#">Trending</a></div>
+            <div class="horizontalMenuItem5"><a href="#">Categories</a></div>
         </div>
     </div>
 
@@ -28,13 +28,19 @@
             </div>
             <div class="bannerAbout" class="bannerAboutFlex">
                 <div class="namebanner">
-                    <h1>The Brigth future of Web 3.0?</h1>
+                    <div class="namebanertitle"><h1>The Brigth future of Web 3.0?</h1></div>
                 </div>
 
                 <div class="bannerText">
-                    <div class="text"><h1>Page in progress!!!<h1></div>
+                    <div class="text">
+                        <div class="presentation">
+                            We dive into the next evolution of the web thst claims to put 
+                            the power of the platforms back into hand of the people. But is it reality
+                            fulfilling is promise?
+                        </div>
+                    </div>
                     <div class="link">
-                        <button class="ReadMe">Read more</button>
+                        <a href="#"><button class="ReadMe">READ MORE</button></a> 
                     </div>
                 </div>
             </div>
@@ -43,35 +49,53 @@
             <div class="bannerMenuTitel">
                 <div class="titel">New</div>
             </div>
-            <div class="bannerMenuItem1"></div>
-            <div class="bannerMenuItem2"></div>
-            <div class="bannerMenuItem3"></div>
+            <div class="bannerMenuItem1">
+                <div class="bannerMenuItem1Titel"><h3><a href="#">Hydrogen VS Electric cars</a></h3></div>
+                <div class="bannerMenuItem1Text"> Will hydrogen-fueled car ever catch up EVs?</div>
+                <hr>
+            </div>
+            <div class="bannerMenuItem2">
+                <div class="bannerMenuItem2Titel"><h3><a href="#">The Dowsides of AI Artistry</a> </h3></div>
+                <div class="bannerMenuItem2Text">What are the possible adverse effects of on demand Ai image generation?</div>
+                <hr>
+            </div>
+            <div class="bannerMenuItem3">
+                <div class="bannerMenuItem3Titel"><h3><a href="#">Is VC funding ddrying up?</a> </h3></div>
+                <div class="bannerMenuItem3Text">Private funding by VC-firms is down 50% YOY. We take a look what that means.</div>
+
+            </div>
         </div>
     </div>
 
     <div class="publication">
         <div class="publication1">
-            <div class="publication1Image"></div>
+            <div class="publication1Image">
+                <img src="image-retro-pcs.jpg" alt="gaming"/>
+            </div>
             <div class="publication1Text">
-                <div class="publication1Textnumero"></div>
-                <div class="publication1textTitle"></div>
-                <div class="publication1textContent"></div>
+                <div class="publication1Textnumero"><div class="numero">01</div></div>
+                <div class="publication1textTitle">Reviving Retro PCs</div>
+                <div class="publication1textContent">What happens when old PCs are given modern upgrades</div>
             </div>
         </div>
         <div class="publication2">
-            <div class="publication2Image"></div>
+            <div class="publication2Image">
+                <img src="image-top-laptops.jpg" alt="gaming"/>
+            </div>
             <div class="publication2Text">
-                <div class="publication2Textnumero"></div>
-                <div class="publication2textTitle"></div>
-                <div class="publication2textContent"></div>
+                <div class="publication2Textnumero"><div class="numero">02</div></div>
+                <div class="publication2textTitle">Top 10 Laptops of 2022</div>
+                <div class="publication2textContent">Our best picks for various needs and budgets</div>
             </div>
         </div>
         <div class="publication3">
-            <div class="publication3Image"></div>
+            <div class="publication3Image">
+                <img src="image-gaming-growth.jpg" alt="gaming"/>
+            </div>
             <div class="publication3Text">
-                <div class="publication3Textnumero"></div>
-                <div class="publication3textTitle"></div>
-                <div class="publication3textContent"></div>
+                <div class="publication3Textnumero"><div class="numero">03</div></div>
+                <div class="publication3textTitle">The Growth of Gaming</div>
+                <div class="publication3textContent">How the pandemic has sparked fresh opportunities</div>
             </div>
         </div>
     </div>
