--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                         <li>Versatile</li><br>
                         <li>Autonomy</li><br>
                         <li>IT thinking</li><br>
+                        <li>Resilient</li><br>
                     </ul>
                 </div>
             </div>
