--- a/space_tourism.html
+++ b/space_tourism.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Steve Feze\Desktop\reactweb\cssChallenges\Space tourism multi-page website\space_space.css">
+    <link rel="stylesheet" href="space_space.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Oxygen&display=swap" rel="stylesheet">
-<script src="C:\Users\Steve Feze\Desktop\reactweb\cssChallenges\Space tourism multi-page website\Space_toutism.js" defer></script>
+<script src="Space_toutism.js" defer></script>
     <title>Document</title>
 </head>
 <body>
