--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="dropdown-content">
                             <a id="#" href="Multi-step-form.html" target="_blank">Multi-step form</a><br>
                             <a id="#" href="HomePage.html" target="_blank">Home page</a><br>
-                            <a id="#" href="space_tourism.html" target="_blank">Multipage website</a><br>
+                            <a id="#" href="space_tourism.html" target="_blank">Multipages</a><br>
                         </div>
                     </li>
                     
