--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <li class="webChallenge">
                         <a href="#">Web challenge</a>
                         <div class="dropdown-content">
-                            <a id="#" href="Multi-step-form.html" target="_blank">Multi-step form</a><br>
-                            <a id="#" href="HomePage.html" target="_blank">Home page</a><br>
-                            <a id="#" href="space_tourism.html" target="_blank">Multipages</a><br>
+                            <a id="#" href="Multi-step-form/Multi-step-form.html" target="_blank">Multi-step form</a><br>
+                            <a id="#" href="HomePage/HomePage.html" target="_blank">Home page</a><br>
+                            <a id="#" href="Space tourism multi-page website/space_tourism.html" target="_blank">Multipages</a><br>
                         </div>
                     </li>
                     
