--- a/Space tourism multi-page website/space_tourism.html
+++ b/Space tourism multi-page website/space_tourism.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="menubar">
             <div class="menuLogo">
-                <img src="space-tourism-website-main\starter-code\assets\shared\logo.svg" alt="logo"/>
+                <img src="logo.svg" alt="logo"/>
             </div>
             <div class="menuNavigation">
                 <div class="home">
