--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <div class="FrontProjets">
                 <div class="multiSepForm" >
                     <div class="multiSepFormImage">
+                        <a href="Multi-step-form/Multi-step-form.html">
                         <a href="Multi-step-form.html">
                          <img src="MultistepForm.JPG" alt="Multi stp form prototype" />    
                         </a>
@@ -140,7 +141,7 @@
                 </div>
                 <div class="homePage">
                     <div class="homePageImage">
-                        <a href="HomePage.html">
+                        <a href="HomePage/HomePage.html">
                           <img src="spaceHome.JPG" alt="home page"/>  
                         </a>
                     </div>
@@ -166,7 +167,7 @@
                         </a>
                     </div>
                     
-                        <a href="space_tourism.html">
+                        <a href="Space tourism multi-page website/space_tourism.html">
                             <div class="multiHomePageTitel">
                                 Space tourism multi-page website
                             </div>
