--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <li>CSS</li><br>
                         <li>Bootstrap Framework</li><br>
                         <li>HTML</li><br>
-                        <li>Webflow</li><br>
+                        <li>Rest API</li><br>
                     </ul>
                 </div>
             </div>
@@ -446,9 +446,9 @@
                             <div>French</div>
                         </div>
                         <div class="bar-container">
-                            <div class="bar"><div class="progessionNode1">Good</div></div>
-                            <div class="bar"><div class="progessionExpress2">Fairly good</div></div>
-                            <div class="bar"><div class="progessionDB3">Fluent</div></div>
+                            <div class="bar"><div class="progessionNode1">B2</div></div>
+                            <div class="bar"><div class="progessionExpress2">B2</div></div>
+                            <div class="bar"><div class="progessionDB3">Native</div></div>
                             
                         </div>
                     </div>
@@ -462,7 +462,7 @@
             <div class="row">
                     <section id="phone" class="col-sm-4">
                         <i class="fa-sharp fa-solid fa-phone"></i>
-                        <span>Telephon</span><br>                     
+                        <span>Phone</span><br>                     
                         +49 176 23574264
                         <hr class="visible-xs">
                     </section>
