--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         
                                     <div class="imageSlide">
                                         <a href="HomePage/HomePage.html" target="_blank">
-                                            <img src="spaceHome.JPG" alt="home page" style="width:100%";  height: 450px;/>  
+                                            <img src="spaceHome.JPG" alt="home page" style="width:100%;  height: 450px";/>  
                                         </a>
                                     </div>
                                 </div>
