--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
 
         <div class="qualitiesMySkill"> <p>My Skills</p></div>
-        <div class="qualities">
+        <div class="qualities reveal">
             <div class="myStrengths">
                 <div class="image">
                     <img src="zach-reiner-hW11fwjzVfA-unsplash.jpg" alt="tree"/>
@@ -240,7 +240,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="myWeaknesses">
+            <div class="myWeaknesses reveal">
                 <div class="image">
                     <img src="branko-stancevic-GI1hwOGqGtE-unsplash.jpg" alt="skil"/>
                 </div>
@@ -256,7 +256,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="myAmbitions">
+            <div class="myAmbitions reveal">
                 <div class="image">
                     <img src="gr-stocks-Iq9SaJezkOE-unsplash.jpg" alt="challenges"/>
                 </div>
