--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="FrontEndWebChallenge">
             <div class="FrontEndWebChallengeTitel" id="multiforms"><p>Frontend web challenges</p></div>
-                    <div class="slideConterner">
+                    <div class="slideConterner reveal">
                                 <div class="slide">
                                     <div class="number">
                                         1 / 4
