--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         </div>
 
         <div class="qualitiesMySkill"> <p>My Skills</p></div>
-        <div class="qualities reveal">
-            <div class="myStrengths">
+        <div class="qualities ">
+            <div class="myStrengths reveal">
                 <div class="image">
                     <img src="zach-reiner-hW11fwjzVfA-unsplash.jpg" alt="tree"/>
                 </div>
