--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
                         
                                     <div class="imageSlide">
                                         <a href="HomePage/HomePage.html" target="_blank">
-                                            <img class = "spaceHome" src="spaceHome.JPG" alt="home page" style="width:100%"/>  
+                                            <img class = "spaceHome" src="spaceHome.JPG" alt="home page" style="width:100%; height:350px"/>  
                                         </a>
                                     </div>
                                 </div>
                          
-                                <div class="slide">
+                                <div class="slide"> 
                                     <div class="numberSlide">
                                         3 / 4
                                     </div>
