--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                        </p>
                         <ul class="menuSecond">
                             <li>
-                                <a class="oeuvre" id="ouvrage" href="#">Projects</a>
+                                <div class="oeuvre" id="ouvrage" href="#">Projects</div>
                             </li>
                             <li>
-                                <a id="com" class="lebenslauf" href="#">Competences</a>
+                                <div id="com" class="lebenslauf" href="#">Competences</div>
                             </li>
                             <li>
-                                <a id="mecontacter" class="joindre" href="#media">Contact</a>
+                                <div id="mecontacter" class="joindre" href="#media">Contact</div>
                             </li>
                         </ul>
                 </div>
