--- a/index.html
+++ b/index.html
@@ -14,8 +14,28 @@
     <script src="https://kit.fontawesome.com/c7efd00882.js" crossorigin="anonymous"></script>
     
     <title>MY portfolio</title>
+
+    <style>
+        df-messenger {
+         --df-messenger-bot-message: #878fac;
+         --df-messenger-button-titlebar-color: #df9b56;
+         --df-messenger-chat-background-color: #fafafa;
+         --df-messenger-font-color: white;
+         --df-messenger-send-icon: #878fac;
+         --df-messenger-user-message: #479b3d;
+        }
+      </style>
 </head>
 <body>
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <div class="chatBOT">
+        <df-messenger
+        intent="WELCOME"
+        chat-title="Portfolio bot"
+        agent-id="52e86b21-9f91-4bad-a4e8-33891426a560"
+        language-code="en"
+        chat-icon = "logo-reddit.svg"
+        ></df-messenger>
     <header>
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container-fluid">
