--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
                 <div class="text">
                     <ul>
                         <li>JavaScript</li><br>
-                        <li>React Framework</li><br>
+                        <li>React JS</li><br>
+                        <li>PHP</li><br>
                         <li>CSS</li><br>
                         <li>Bootstrap Framework</li><br>
                         <li>HTML</li><br>
@@ -453,8 +454,8 @@
                         <div class="bar-container">
                             <div class="bar"><div class="progesshtml">80%</div></div>
                             <div class="bar"><div class="progessCss">75%</div></div>
-                            <div class="bar"><div class="progessJS">55%</div></div>
-                            <div class="bar"><div class="progessresp">65%</div></div>
+                            <div class="bar"><div class="progessJS">70%</div></div>
+                            <div class="bar"><div class="progessresp">75%</div></div>
                         </div>
                     </div>
                 </div>
@@ -476,6 +477,7 @@
                             <div class="bar"><div class="progessionExpress">30%</div></div>
                             <div class="bar"><div class="progessionDB">30%</div></div>
                             <div class="bar"><div class="progessionVC">60%</div></div>
+                            <div class="bar"><div class="progessionPHP">75%</div></div>
                         </div>
                     </div>
                 </div>
