--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </li>
 
                     <li class="webChallenge">
-                        <a href="#">Web challenge</a>
+                        <a href="#">my achievements</a>
                         <div class="dropdown-content">
                             <a id="#" href="Multi-step-form/Multi-step-form.html" target="_blank">Multi-step form</a><br>
                             <a id="#" href="HomePage/HomePage.html" target="_blank">Home page</a><br>
